--- a/app/src/main/res/layout/fragment_configuracion.xml
+++ b/app/src/main/res/layout/fragment_configuracion.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.configuracion.ConfiguracionFragment">
+    tools:context="com.exploradordelugaresturisticos.ui.configuracion.ConfiguracionFragment">
 
     <TextView
         android:id="@+id/text_configuracion"
