--- a/app/src/main/res/layout/fragment_lugares.xml
+++ b/app/src/main/res/layout/fragment_lugares.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.lugares.LugaresFragment">
+    tools:context="com.exploradordelugaresturisticos.ui.lugares.LugaresFragment">
 
     <TextView
-        android:id="@+id/text_gallery"
+        android:id="@+id/text_ubicacion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
