--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -4,16 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.exploradordelugaresturisticos.MainActivity">
+    tools:context=".MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.ExploradorDeLugaresTuristicos.AppBarOverlay">
-
-
-
-    </com.google.android.material.appbar.AppBarLayout>
+        android:theme="@style/Animation.Design.BottomSheetDialog"/>
 
     <include layout="@layout/content_main" />
 
