--- a/app/src/main/res/layout/item_lugar.xml
+++ b/app/src/main/res/layout/item_lugar.xml
@@ -5,47 +5,69 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="8dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    app:cardCornerRadius="16dp"
+    app:cardElevation="4dp"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#F2F2F2"
         android:padding="16dp">
 
         <ImageView
-            android:id="@+id/imageViewLugar"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:contentDescription="@string/image_description"
-            android:scaleType="centerCrop"
+            android:id="@+id/ivFoto"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:scaleType="centerInside"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/textViewNombreLugar"
-            android:layout_width="0dp"
+            android:id="@+id/tvTitulo"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/imageViewLugar"
-            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="#666666"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="Nombre del Lugar" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ivFoto"
+            app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginTop="8dp"
+            android:text="Nombre del lugar" />
 
         <TextView
-            android:id="@+id/textViewDescripcionLugar"
-            android:layout_width="0dp"
+            android:id="@+id/tvDescripcion"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:text="Descripcion del lugar"
+            android:maxLines="15"
+            android:ellipsize="end"
             android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="@id/textViewNombreLugar"
-            app:layout_constraintTop_toBottomOf="@id/textViewNombreLugar"
+            android:textColor="#666666"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="Descripción breve del lugar turístico." />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvTitulo"
+            />
+
+        <Button
+            android:id="@+id/btVerMas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ver_m_s"
+            android:textColor="@android:color/white"
+            android:backgroundTint="#666666"
+            app:layout_constraintTop_toBottomOf="@id/tvDescripcion"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.cardview.widget.CardView>
